<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>pdfact</groupId>
  <artifactId>pdfact-parent</artifactId>
  <name>${project.artifactId}</name>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <project.basename>pdfact</project.basename>
    <project.dirs.bin>./bin</project.dirs.bin>
    <project.dirs.resources>./resources</project.dirs.resources>

    <project.files.checkstyle>${project.dirs.resources}/checkstyle_config.xml</project.files.checkstyle>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
  </licenses>

  <repositories>
    <!-- 
      Issue #4 causes some warnings to be displayed. To fix the issue, we
      need a version of Google Guice which is not offically released yet, but 
      which is available in their Github repository. The following repository is
      needed to be able to use this version from Github as a dependency, see
      https://stackoverflow.com/questions/20161602/loading-maven-dependencies-from-github
    -->
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <modules>
    <module>pdfact-core</module>
    <module>pdfact-cli</module>
  </modules>

  <contributors>
    <contributor>
      <name>Claudius Korzen</name>
      <roles>
        <role>Project leader</role>
      </roles>
    </contributor>
  </contributors>

  <dependencies>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>2.13.3</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.13.3</version>
    </dependency>
    <!-- The following dependency is needed to be able to configure loggings 
      that use the Commons Logging API (as done by e.g., PdfBox) via log4j2 -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-jcl</artifactId>
      <version>2.13.3</version>
    </dependency>
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.2</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
    </dependency>
    <dependency>
      <groupId>com.github.google</groupId>
      <artifactId>guice</artifactId>
      <version>fae2e28</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- Configure the compiler plugin. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.2</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>

      <!-- Configure the checkstyle plugin. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>2.17</version>
        <configuration>
          <consoleOutput>true</consoleOutput>
          <configLocation>${project.files.checkstyle}</configLocation>
        </configuration>
        <executions>
          <execution>
            <id>checkstyle</id>
            <goals>
              <goal>checkstyle</goal>
            </goals>
            <phase>prepare-package</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <!-- Get rid of the "Unable to locate Source XRef to link to - DISABLED" warning -->
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>2.3</version>
      </plugin>
    </plugins>
  </reporting>
</project>
